--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "body-parser": "^1.19.1",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "express-winston": "^4.2.0",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.10",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.5.1"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
