--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "movies-explorer-api",
+  "name": "chetra-server",
   "version": "1.0.0",
-  "description": "backend diploma project",
+  "description": "backend for chetra-game",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/larikov174/movies-explorer-api.git"
+    "url": "git+https://github.com/larikov174/chetra-server.git"
   },
   "keywords": [
     "movies-explorer",
@@ -20,9 +20,9 @@
   "author": "Andrey Larikov",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/larikov174/movies-explorer-api/issues"
+    "url": "https://github.com/larikov174/chetra-server/issues"
   },
-  "homepage": "https://github.com/larikov174/movies-explorer-api#readme",
+  "homepage": "https://chetra.herokuapp.com",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
